# Near-Protocol-Practive

./: Cargo.toml  README.md
LotteryFT/: Cargo.toml
LotteryFT/src/: lib.rs
LotteryNFT/: Cargo.toml
LotteryNFT/src/: lib.rs
contract/: Cargo.toml
contract/contract_calls/: Cargo.toml
contract/contract_calls/src/: lib.rs
contract/fungible-token-contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
factory_pattern_implementation/: Cargo.toml
factory_pattern_implementation/neardev/: dev-account  dev-account.env
factory_pattern_implementation/src/: lib.rs
lottery/: Cargo.toml  buyTicket.sh  commands.sh  deploy.sh
lottery/neardev/: dev-account  dev-account.env
lottery/src/: airdrop_ft.rs  callback.rs  enumeration.rs  internal.rs  lib.rs  nft_cross_call.rs
lottery_contract/: Cargo.toml
lottery_contract/src/: airdrop_ft.rs  callback.rs  enumeration.rs  lib.rs  nft_cross_call.rs
random_number_implementation/: Cargo.toml
random_number_implementation/src/: lib.rs
res/: ft.wasm  ft_staking.wasm  fungible_token.wasm  lottery_contract.wasm  non_fungible_token.wasm
smart_contract_unit_testing/: Cargo.toml
smart_contract_unit_testing/src/: lib.rs
tests/sim/: tests.rs  utils.rs
time_implementation/: Cargo.toml  Readme.md
time_implementation/neardev/: dev-account  dev-account.env
time_implementation/src/: lib.rs
